fix: 🐛 apply global scrollbar and link design

--- a/src/styles/editor.css
+++ b/src/styles/editor.css
@@ -8,7 +8,7 @@
   padding-right: 5px;
   height: 490px;
   font-size: 1rem;
-  @apply border-none scrollbar;
+  @apply border-none;
 }
 
 .ProseMirror-focused {
@@ -53,4 +53,13 @@
 
 .ProseMirror h3 {
   @apply text-sm font-bold;
+}
+
+.ProseMirror a {
+  color: theme('colors.blue.prussian');
+  text-decoration: underline;
+}
+
+.ProseMirror a:hover {
+  cursor: pointer;
 }
